<resources>
    <string name="app_name">TAMS</string>
    <string name="map_view_name">Asset Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">List</string>
    <string name="action_filter">Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_current_location">Current Location</string>
    <string name="title_activity_main">Asset Map</string>
    <string name="title_activity_add_asset">Add Asset</string>
    <string name="action_add_asset">Add Asset</string>
    <string name="action_edit_asset">Edit</string>
    <string name="action_asset_list">Asset List</string>
    <string name="title_activity_asset_add">Add Asset</string>
    <string name="title_asset_filter_categories">Asset Category</string>
    <string name="title_asset_filter_type">Asset Type</string>
    <string name="title_select_location">Select Location</string>

    <string name="action_done">Done</string>
    <string name="action_reset">Reset</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="action_create">Create</string>
    <string name="action_apply_filter">Apply</string>
    <string name="action_clear">Clear</string>

    <string name="action_category">Category</string>
    <string name="action_type">Type</string>
    <string name="camera_mic">camera_mic</string>
    <string name="icon_mic">icon_mic</string>
    <string name="action_camera">Camera</string>
    <string name="action_audio">Audio Recording</string>
    <string name="play_sound">Play</string>
    <string name="stop_sound">Stop</string>
    <string name="record_sound">Record</string>
    <string name="action_notes">Notes</string>
    <string name="action_title">Name</string>
    <string name="stop_light">stop_light</string>
    <string name="road_sign">road_sign</string>
    <string name="traffic_sign">Traffic Sign</string>
    <string name="caution_sign">Caution_Sign</string>
    <string name="map_view">Map View</string>

    <!--need to use @string source for providing hints or others -->
    <string name="connection_lost_network">Connection lost due to network</string>
    <string name="connection_lost_service">Connection lost due to service</string>
    <string name="connection_failed">Failed to connect</string>
    <string name="filter_applied">Filter Applied</string>
    <string name="location_permission_title">Location Required</string>
    <string name="location_permission_message">TAMS needs to use your device\'s location in order to function properly. If you accept, please tap \'OK\' and then tap \'Allow\'.</string>
    <string name="location_enable_title">Location Disable!</string>
    <string name="lcoation_enable_message">Location is disabled in settings. Please enable in order to use TAMS\'s map functionality.</string>
    <string name="location_settings_disabled">Turn on location to use map functionality</string>
    <string name="location_settings_enable">Enable</string>
    <string name="check_category_type_selection">Please select both a category and a type to apply the filter</string>
    <string name="apply_filter_title">Apply Filter</string>
    <string name="apply_filter_message">Apply the selected filter to the map so that only assets of the same category and type will be shown?</string>
    <string name="voice_over_rec">Voice_Record</string>
    <string name="provide_title">Provide a Title</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="title_activity_asset_filter">Filter Map</string>
</resources>
