<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scribblesinc.tams.MainActivity">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_list"
        android:title="@string/action_list"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_current_location"
        android:icon="@drawable/ic_current_location"
        android:title="@string/action_current_location"
        app:showAsAction="ifRoom"
        android:onClick="currentLocationAction"/>

</menu>
