<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AudioCapture"
    tools:showIn="@layout/activity_audio">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mic_img"
        android:src="@drawable/ic_mic"

        android:scaleType="center"

        />


    <Button
        android:id="@+id/play_sound_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_sound"
        android:layout_alignParentRight="true"

        />
    <Button
        android:id="@+id/stop_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_sound"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/record_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_sound"
        />


</RelativeLayout>